(library
 (public_name irmin-pack.unix)
 (name irmin_pack_unix)
 (libraries
  fmt
  index
  index.unix
  irmin
  irmin-pack
  logs
  lwt
  lwt.unix
  mtime
  cmdliner
  optint
  checkseum
  checkseum.ocaml
  rusage
  landmarks)
 (preprocess
  (pps ppx_irmin.internal landmarks-ppx))
 (instrumentation
  (backend bisect_ppx landmarks)))
